# blinksy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  justfile
.github/workflows/: ci.yml  release.yml
blinksy/: Cargo.toml
blinksy-desktop/: Cargo.toml
blinksy-desktop/examples/: 1d-rainbow.rs  2d-noise.rs  2d-rainbow.rs  3d-arcs.rs  3d-cube-face-noise.rs  3d-cube-noise.rs  3d-cube-volume-noise.rs  3d-cube-volume-rainbow.rs
blinksy-desktop/src/: driver.rs  lib.rs  time.rs
blinksy/src/: color.rs  control.rs  dimension.rs  layout.rs  lib.rs  markers.rs  pattern.rs  time.rs  util.rs
blinksy/src/color/: component.rs  convert.rs  correction.rs  gamma_srgb.rs  hsi.rs  hsv.rs  hue.rs  led.rs  linear_srgb.rs  lms.rs  mod.rs  okhsl.rs  okhsv.rs  oklab.rs  output.rs  rgb.rs  srgb.rs  xyz.rs
blinksy/src/driver/: mod.rs
blinksy/src/driver/clocked/: delay.rs  mod.rs  spi.rs
blinksy/src/driver/clockless/: delay.rs  mod.rs
blinksy/src/drivers/: apa102.rs  mod.rs  sk6812.rs  ws2812.rs
blinksy/src/layout/: iterators.rs  layout1d.rs  layout2d.rs  layout3d.rs  mod.rs
blinksy/src/layout/iterators/: arc.rs  grid.rs  line.rs  mod.rs
blinksy/src/leds/: apa102.rs  lpd8806.rs  mod.rs  sk6812.rs  ws2812.rs
blinksy/src/patterns/: mod.rs  noise.rs  rainbow.rs
blinksy/src/util/: bits.rs  component.rs  map_range.rs  mod.rs
core/: Cargo.toml
core/src/: color.rs  control.rs  dimension.rs  layout.rs  lib.rs  pattern.rs  time.rs
core/src/driver/: mod.rs
core/src/driver/clocked/: mod.rs  spi.rs
core/src/driver/clockless/: mod.rs
core/src/drivers/: apa102.rs  ws2812.rs
core/src/patterns/: mod.rs  noise.rs  rainbow.rs
esp/: Cargo.toml
esp/.cargo/: config.toml
esp/blinksy-esp/: Cargo.toml
esp/blinksy-esp/src/: lib.rs  rmt.rs  time.rs  util.rs
esp/gledopto/: Cargo.toml  README.md
esp/gledopto/examples/: apa102-grid-embassy.rs  apa102-grid.rs  button.rs  ws2812-face-cube-embassy.rs  ws2812-face-cube.rs  ws2812-strip-embassy.rs  ws2812-strip.rs  ws2812-volume-cube.rs
esp/gledopto/src/: button.rs  lib.rs
esp/src/: lib.rs  rmt.rs
src/: layout.rs  led.rs  lib.rs  pattern.rs  pixels.rs
src/led/: clocked.rs  clockless.rs  esp.rs  mod.rs
src/led/chipsets/: apa102.rs  mod.rs  ws2812.rs
src/patterns/: mod.rs  noise.rs  rainbow.rs
