[package]
name = "blinksy"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.10"
embedded-hal = "1.0.0"
esp-hal = { version = "1.0.0-beta.0", optional = true }
# esp-hal = { version = "1.0.0-beta.0", features = ["esp32"] }
fugit = "0.3.7"
heapless = "0.8.0"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
palette = { version = "0.7.6", default-features = false, features = ["libm", "bytemuck"] }
smart-leds-trait = "0.3.1"

[features]
esp = ["dep:esp-hal"]
