[workspace]
resolver = "3"
members = [
  "blinksy",
  "blinksy-desktop"
]

[workspace.package]
rust-version = "1.88.0"
description = "no-std, no-alloc LED control library designed for 1D, 2D, and 3D layouts"
readme = "README.md"
homepage = "https://github.com/ahdinosaur/blinksy"
repository = "https://github.com/ahdinosaur/blinksy"
license = "EUPL-1.2"
keywords = ["blinksy", "embedded", "no-std", "ws2812", "apa102"]
categories = ["embedded", "hardware-support", "multimedia", "no-std", "rendering"]
