[package]
name = "blinksy-desktop"
version = "0.8.0"
edition = "2021"

rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["blinksy"]
categories = ["multimedia", "rendering"]

[dependencies]
blinksy = { path = "../blinksy", version = "0.8" }
egui = "0.28"
egui-miniquad = "0.15.0"
glam = { version = "0.30.1" }
miniquad = "0.4"
