[package]
name = "blinksy"
version = "0.4.0"
edition = "2021"
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
defmt = "0.3.10"
embedded-hal = "1.0.0"
fugit = "0.3.7"
glam = { version = "0.30.1", default-features = false, features = ["libm"] }
heapless = "0.8.0"
noise-functions = { version = "0.8", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
smart-leds-trait = "0.3.1"
