[package]
name = "blinksy"
version = "0.10.0"
edition = "2021"
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
defmt = { version = "0.3.10", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
fugit = "0.3.7"
glam = { version = "0.30.1", default-features = false, features = ["libm"] }
heapless = "0.9.1"
noise-functions = { version = "0.8", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
smart-leds-trait = "0.3.1"

[features]
default = []
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]

[package.metadata.docs.rs]
features = ["async"]
