[package]
name = "blinksy"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.10"
embedded-hal = "1.0.0"
fugit = "0.3.7"
glam = { version = "0.30.1", default-features = false, features = ["libm"] }
heapless = "0.8.0"
noise = { git = "https://github.com/ahdinosaur/noise-rs", branch = "no-std", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
palette = { version = "0.7.6", default-features = false, features = ["libm", "bytemuck"] }
smart-leds-trait = "0.3.1"
