[workspace]
resolver = "3"
members = [
  "blinksy-esp",
  "gledopto"
]

[workspace.package]
rust-version = "1.88.0"
description = "no-std, no-alloc LED control library for 1D, 2D, and 3D layouts"
readme = "../README.md"
homepage = "https://github.com/ahdinosaur/blinksy"
repository = "https://github.com/ahdinosaur/blinksy"
license = "EUPL-1.2"
keywords = ["blinksy", "embedded", "no-std", "ws2812", "apa102"]
categories = ["embedded", "hardware-support", "multimedia", "no-std", "rendering"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
