[package]
edition = "2021"
name    = "gledopto"
version = "0.9.0"

rust-version.workspace = true
description.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
critical-section = "1.2.0"
blinksy = { path = "../../blinksy", version = "0.9" }
blinksy-esp = { path = "../blinksy-esp", version = "0.9" }
button-driver = { version = "0.2.2", features = ["embedded_hal"] }
defmt = "0.3.10"
esp-hal = { version = "1.0.0-rc.0", features = ["defmt", "unstable"] }
esp-hal-embassy = { version = "0.8.0", optional = true, features = ["defmt"] }
esp-println = { version = "0.13.0", features = ["defmt-espflash"] }
esp-alloc = { version = "0.7.0", features = ["defmt"] }
esp-backtrace = { version = "0.15.1", features = ["defmt", "panic-handler", "exception-handler"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["defmt"] }
fugit = "0.3.7"

[dev-dependencies]
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time = "0.4.0"

[features]
default = []
embassy = [
  "dep:esp-hal-embassy",
  "async"
]
async = [
  "blinksy-esp/async"
]

##
# Board Support Feature Flags
##

# Gledopto GL-C-016WL-D
gl_c_016wl_d = [
  "blinksy-esp/esp32",
  "esp-hal/esp32",
  "esp-hal-embassy/esp32",
  "esp-println/esp32",
  "esp-backtrace/esp32",
  "esp-bootloader-esp-idf/esp32",
]

# Gledopto GL-C-017WL-D
gl_c_017wl_d = [
  "blinksy-esp/esp32",
  "esp-hal/esp32",
  "esp-println/esp32",
  "esp-backtrace/esp32",
  "esp-bootloader-esp-idf/esp32",
]

# Mock for tests, builds, and docs
mock = [
  "blinksy-esp/esp32c6",
  "esp-hal/esp32c6",
  "esp-hal-embassy/esp32c6",
  "esp-println/esp32c6",
  "esp-backtrace/esp32c6",
  "esp-bootloader-esp-idf/esp32c6",
]

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
features       = ["mock"]
