[package]
edition = "2021"
name    = "gledopto"
version = "0.10.0"

rust-version.workspace = true
description.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
critical-section = "1.2.0"
blinksy = { path = "../../blinksy", version = "0.10" }
blinksy-esp = { path = "../blinksy-esp", version = "0.10" }
button-driver = { version = "0.2.2", features = ["embedded_hal"] }
defmt = { version = "1.0.1", optional = true }
esp-hal = { version = "1.0.0-rc.0", features = ["unstable"] }
esp-hal-embassy = { version = "0.8.0", optional = true }
esp-println = { version = "0.13.0", optional = true }
esp-alloc = { version = "0.7.0", optional = true }
esp-backtrace = { version = "0.15.1", optional = true, features = ["panic-handler", "exception-handler"] }
esp-bootloader-esp-idf = { version = "0.2.0" }
fugit = "0.3.7"

[dev-dependencies]
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time = "0.4.0"

[features]
default = [
  "backtrace",
  "defmt"
]
alloc = [
  "dep:esp-alloc"
]
async = [
  "blinksy-esp/async"
]
backtrace = [
  "dep:esp-backtrace",
]
defmt = [
  "dep:defmt",
  "dep:esp-println",
  "blinksy/defmt",
  "blinksy-esp/defmt",
  "esp-hal/defmt",
  "esp-hal-embassy/defmt",
  "esp-println?/defmt-espflash",
  "esp-alloc?/defmt",
  "esp-backtrace?/defmt",
  "esp-bootloader-esp-idf/defmt"
]
embassy = [
  "dep:esp-hal-embassy",
  "async"
]
println = [
  "dep:esp-println",
  "esp-backtrace?/println"
]

##
# Board Support Feature Flags
##

# Gledopto GL-C-016WL-D
gl_c_016wl_d = [
  "blinksy-esp/esp32",
  "esp-hal/esp32",
  "esp-hal-embassy/esp32",
  "esp-println?/esp32",
  "esp-backtrace?/esp32",
  "esp-bootloader-esp-idf/esp32",
]

# Gledopto GL-C-017WL-D
gl_c_017wl_d = [
  "blinksy-esp/esp32",
  "esp-hal/esp32",
  "esp-println?/esp32",
  "esp-backtrace?/esp32",
  "esp-bootloader-esp-idf/esp32",
]

# Mock for tests, builds, and docs
mock = [
  "blinksy-esp/esp32c6",
  "esp-hal/esp32c6",
  "esp-hal-embassy/esp32c6",
  "esp-println?/esp32c6",
  "esp-backtrace?/esp32c6",
  "esp-bootloader-esp-idf/esp32c6",
]

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
features       = ["mock", "embassy"]
